Create Module-05 branch with CPP-Module-05

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,7 +1,8 @@
-NAME = convert
+NAME = Bureaucrat
 
 SRCS =	main.cpp \
-		ScalarConverter.cpp
+		Bureaucrat.cpp
+
 OBJ_DIR = .objs
 
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
