--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,8 +1,8 @@
-NAME = serializer
+NAME = Form
 
 SRCS =	main.cpp \
-		Serializer.cpp
-
+		Bureaucrat.cpp \
+		Form.cpp
 OBJ_DIR = .objs
 
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
