Create Module-02 branch with CPP-Module-02

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,8 +1,7 @@
-NAME = ScavTrap
+NAME = Fixed
 
-SRCS =	main.cpp		\
-		ClapTrap.cpp	\
-		ScavTrap.cpp
+SRCS =	main.cpp \
+		Fixed.cpp
 
 OBJ_DIR = .objs
 
