Create Module-01 branch with CPP-Module-01

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,7 +1,9 @@
-NAME = Kanonik
+NAME = zombie
 
 SRCS =	main.cpp \
-		Fixed.cpp
+		newZombie.cpp \
+		randomChump.cpp \
+		Zombie.cpp \
 
 OBJ_DIR = .objs
 
