--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -1,8 +1,10 @@
-NAME = zombieHorde
+NAME = weapon
 
 SRCS =	main.cpp \
-		Zombie.cpp \
-		zombieHorde.cpp
+		HumanB.cpp \
+		HumanA.cpp \
+		Weapon.cpp \
+
 
 OBJ_DIR = .objs
 
@@ -10,7 +12,7 @@ OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
 
 CXX = c++
 
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -g
 
 all: $(NAME)
 
