Create Module-00 branch with CPP-Module-00

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,9 +1,6 @@
-NAME = zombie
+NAME = megaphone
 
-SRCS =	main.cpp \
-		newZombie.cpp \
-		randomChump.cpp \
-		Zombie.cpp \
+SRCS =	megaphone.cpp
 
 OBJ_DIR = .objs
 
